fixed bug with the static image on small maps

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -33,7 +33,7 @@
   #sm-static {
     // background-image: url("https://api.mapbox.com/styles/v1/mapbox/streets-v10/static/-73.60488,45.53257,10/414x200?access_token=#{ ENV['MAPBOX_API_KEY'] }");
     width: 100%;
-    height: 100%;
+    height: 200px;
     grid-column: 1;
     grid-row: 1;
   }
